--- a/all/templates/all/model_select.html
+++ b/all/templates/all/model_select.html
@@ -31,10 +31,10 @@
 <th data-priority="6" class="columnSelector-false th.target.complex" data-placeholder="e.g. '1BGX'">Complex PDB ID</th>
 <th data-priority="6" class="columnSelector-false th.target.receptor rec_pdb_id" data-placeholder="e.g. '1BVL'">Receptor PDB ID</th>
 <th data-priority="6" class="columnSelector-false th.target.ligand lig_pdb_id" data-placeholder="e.g. '3LZT'">Ligand PDB ID</th>
-<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '!Not scored'">ZRANK Score</th>
-<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '!Not scored'">ZRANK2 Score</th>
-<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '!Not scored'">PISA Score</th>
-<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '!Not scored'">SPIDER Score</th>
+<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '/\d/'">ZRANK Score</th>
+<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '/\d/'">ZRANK2 Score</th>
+<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '/\d/'">PISA Score</th>
+<th data-priority="6" class="columnSelector-false" data-placeholder="e.g. '/\d/'">SPIDER Score</th>
 
 </tr>
 
