--- a/all/templates/all/about.html
+++ b/all/templates/all/about.html
@@ -4,10 +4,10 @@
 {% django_js jquery=false %}
 
 <div class="page-header">
-<h1>About <small>Some text</small></h1>
+<h1>About</h1>
 </div>
 
-About
+About<br><br>
 
 <a href="{% url 'search' %}">Back to start</a>
 {% endblock %}
