--- a/all/templates/all/base.html
+++ b/all/templates/all/base.html
@@ -44,9 +44,9 @@
 <!--script for target dropdown in navbar-->
 <script>
 function goTo(name) {
-	if (name != "-") {
-		window.location.href = Django.url('target_info',{'name':name});
-	}
+if (name != "-") {
+	window.location.href = Django.url('target_info',{'name':name});
+}
 }
 
 //info for JSMol window
@@ -69,6 +69,7 @@ disableInitialConsole: true
 <!--account for navbar, give space at bottom-->
 <style>
 body {
+padding-top: 60px;
 padding-bottom: 40px;
 }
 </style>
@@ -140,7 +141,7 @@ padding-bottom: 40px;
         </li>
 	<li><a class="methods" href="{% url 'method' %}">Methods</a></li>
 	<li><a class="summary" href="{% url 'summary' '1BGX' %}">Summary</a></li>
-	<li><a class="scoring" href="{% url 'scoring' 'PISA' '1BGX' '10' %}">Scoring</a></li>
+	<li><a class="scoring" href="{% url 'scoring' 'PISA' '1ACB' '5' %}">Scoring</a></li>
 	<li><a class="refinement_page" href="{% url 'refinement' 'ZDOCK' 'FiberDock' '1ACB' '10' %}">Refinement</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
