--- a/all/templates/all/refinement.html
+++ b/all/templates/all/refinement.html
@@ -7,14 +7,18 @@
 <h1>Refinement</h1>
 </div>
 
-<div id="refinement_graph" style="width:100%; height:600px;"></div>
-
 <script>
 //change refinement graph when options are changed
 function change_graph(target,method,refinement,cutoff) {
 window.location.href = Django.url('refinement',{'method':method,'refinement':refinement,'target':target,'cutoff':cutoff});
 }
+</script>
 
+{% if results_to_show %}
+
+<div id="refinement_graph" style="width:100%; height:600px;"></div>
+
+<script>
 var no_ref_irmsds = [{% for a in no_ref_irmsds %}"{{ a }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var improvements = [{% for b in improvements %}"{{ b }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var ref_model_ids = [{% for c in ref_model_ids %}"{{ c }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
@@ -87,30 +91,51 @@ $(function () {
 });
 </script>
 
+<br>Try changing the cutoff to see more results, but beware that refinement of poor quality models is difficult.<br><br><br>
+
+{% else %}
+
+There were no refinements of the chosen type carried out for the chosen target and method. Please select different criteria.<br><br><br>
+
+{% endif %}
+
 <table class="table">
-<form name="refinement_graph_choices" action="">
+<form name="refinement_graph_choices" action="" onsubmit="return false">
 <tr><td>Choose a target:</td>
 <td><select name="target_choice_all" style="width: 90px">
 {% for each_target in target_names %}
+{% if each_target == target %}
+<option selected="selected" value={{ each_target }}>{{ each_target }}</option>
+{% else %}
 <option value={{ each_target }}>{{ each_target }}</option>
+{% endif %}
 {% endfor %}
 </select></td></tr>
 <tr><td>Choose a docking method:</td>
 <td><select name="docking_method">
 {% for each_method in method_names %}
+{% if each_method == method %}
+<option selected="selected" value={{ each_method }}>{{ each_method }}</option>
+{% else %}
 <option value={{ each_method }}>{{ each_method }}</option>
+{% endif %}
 {% endfor %}
 </select></td></tr>
 <tr><td>Choose a refinement method:</td>
 <td><select name="refinement_method">
 {% for each_refinement in refinement_names %}
+{% if each_refinement == refinement %}
+<option selected="selected" value={{ each_refinement }}>{{ each_refinement }}</option>
+{% else %}
 <option value={{ each_refinement }}>{{ each_refinement }}</option>
+{% endif %}
 {% endfor %}
 </select></td></tr>
 <tr><td>Choose a cut-off I-RMSD:</td>
-<td><input type="text" name="cutoff_irmsd" value="10" size=6></td></tr>
+<td><input type="text" name="cutoff_irmsd" value="{{ cutoff }}" size=6></td></tr>
 <tr><td></td><td><button type="button" onClick='change_graph(document.refinement_graph_choices.target_choice_all.options[document.refinement_graph_choices.target_choice_all.selectedIndex].value,document.refinement_graph_choices.docking_method.options[document.refinement_graph_choices.docking_method.selectedIndex].value,document.refinement_graph_choices.refinement_method.options[document.refinement_graph_choices.refinement_method.selectedIndex].value,document.refinement_graph_choices.cutoff_irmsd.value)'>Update</button></td></tr>
 </form></table>
 
+<a href="#">Back to top</a>&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="{% url 'search' %}">Back to start</a>
 {% endblock %}
