--- a/all/templates/all/method.html
+++ b/all/templates/all/method.html
@@ -57,7 +57,7 @@ This page gives information on the methods used to produce and score docking mod
 
 <tr>
 <td>FIBERDOCK</td>
-<td>Backbone flexibility is modelled by an unlimited number of normal modes, hence accounting for small scale conformational changes. The structures of flexible proteins are iteratively minimised along the most relevant nodes.</td>
+<td>Backbone flexibility is modelled by an unlimited number of normal modes, hence accounting for small scale conformational changes. The structures of flexible proteins are iteratively minimised along the most relevant modes.</td>
 <td>6<sup>th</sup> (CAPRI5), 2<sup>nd</sup> (CAPRI4)</td>
 <td><a href="http://bioinfo3d.cs.tau.ac.il/FiberDock/" target="_blank">http://bioinfo3d.cs.tau.ac.il/FiberDock/</a></td>
 <td><a href="http://onlinelibrary.wiley.com/doi/10.1002/prot.22668/full" target="_blank">http://onlinelibrary.wiley.com/doi/10.1002/prot.22668/full</a></td>
