--- a/all/templates/all/scoring.html
+++ b/all/templates/all/scoring.html
@@ -34,7 +34,7 @@ $(function () {
 		type: 'scatter'
 	},
 	title: {
-		text: '{{ scorer_choice }} score against I-RMSD for each model in {{ target_choice }}'
+		text: '{{ scorer_choice }} score against I-RMSD for each model of {{ target_choice }}'
 	},
 	legend : {
 		enabled: true
