last one hopefully

--- a/all/templates/all/model.html
+++ b/all/templates/all/model.html
@@ -8,7 +8,7 @@
 </div>
 
 <table class="table"><tr>
-<th><span class="capri_rank">CAPRI Rank</span></th><th><span class="{{ capri_rank }}">{{ capri_rank }}</span></th>
+<th><span class="capri_rank">CAPRI Evaluation</span></th><th><span class="{{ capri_rank }}">{{ capri_rank }}</span></th>
 </tr><tr>
 
 <td colspan="2"><a href="{% url 'model_select' model.target.name 'All' 'All' 0 0 0 0 1 0 %}" class="view_models">View other models for {{ model.target.name }}</a></td>
