--- a/all/templates/all/model_select.html
+++ b/all/templates/all/model_select.html
@@ -23,7 +23,7 @@
 <th data-priority="4" class="columnSelector-false th.l_rmsd l_rmsd" data-placeholder="e.g. '<15'">L-RMSD</th>
 <th data-priority="4" class="columnSelector-false th.r_rmsd r_rmsd" data-placeholder="e.g. '<4'">R-RMSD</th>
 <th data-priority="3" class="columnSelector-false th.fnat fnat" data-placeholder="e.g. '>0.5'">Fnat</th>
-<th data-priority="3" class="sorter-capri_rank filter-select th.capri_rank">CAPRI Rank</th>
+<th data-priority="3" class="sorter-capri_rank filter-select th.capri_rank">CAPRI Evaluation</th>
 <th data-priority="5" class="columnSelector-false th.dasa" data-placeholder="e.g. '<5000'">&#916;ASA</th>
 <th data-priority="5" class="columnSelector-false th.no_clashes" data-placeholder="e.g. '<60'">No. of clashes</th>
 <th data-priority="5" class="columnSelector-false th.i_l_rmsd l_i_rmsd" data-placeholder="e.g. '<3.1'">I-L-RMSD</th>
