--- a/all/templates/all/summary.html
+++ b/all/templates/all/summary.html
@@ -32,70 +32,48 @@ if (target != "-") {
 var methods = [{% for c in methods %}"{{ c }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 </script>
 
-{% if at_least_one_no_cluspro %}
+{% if at_least_one %}
+
+<p>View acceptable and better solutions for {{ target.name }}: Select top <select id="n_top_models">
+<option value="Top 1">1</option>
+<option value="Top 10">10</option>
+<option value="Top 100" selected="selected">100</option>
+<option value="Top 500">500</option></select> (according to method rank)</p><br>
 
 <div id="capri_comparison" style="width:100%; height:600px;"></div>
+
+<p>Note that ClusPro models are a result of the clustering of 1000 structures (&#126;30 models are produced per target). Be careful when comparing ClusPro to other methods.</p>
 
 <script>
 var acceptable_by_method_500 = [{% for a in acceptable_by_method_500 %}"{{ a }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var acceptable_by_method_100 = [{% for b in acceptable_by_method_100 %}"{{ b }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var acceptable_by_method_10 = [{% for c in acceptable_by_method_10 %}"{{ c }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
+var acceptable_by_method_1 = [{% for c in acceptable_by_method_1 %}"{{ c }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var medium_by_method_500 = [{% for a in medium_by_method_500 %}"{{ a }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var medium_by_method_100 = [{% for b in medium_by_method_100 %}"{{ b }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var medium_by_method_10 = [{% for c in medium_by_method_10 %}"{{ c }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
+var medium_by_method_1 = [{% for c in medium_by_method_1 %}"{{ c }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var high_by_method_500 = [{% for a in high_by_method_500 %}"{{ a }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var high_by_method_100 = [{% for b in high_by_method_100 %}"{{ b }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var high_by_method_10 = [{% for c in high_by_method_10 %}"{{ c }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
+var high_by_method_1 = [{% for c in high_by_method_1 %}"{{ c }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 
 
 for (var i=0;i<acceptable_by_method_500.length;i++) {
 acceptable_by_method_500[i] = parseFloat(acceptable_by_method_500[i])
 acceptable_by_method_100[i] = parseFloat(acceptable_by_method_100[i])
 acceptable_by_method_10[i] = parseFloat(acceptable_by_method_10[i])
+acceptable_by_method_1[i] = parseFloat(acceptable_by_method_1[i])
 medium_by_method_500[i] = parseFloat(medium_by_method_500[i])
 medium_by_method_100[i] = parseFloat(medium_by_method_100[i])
 medium_by_method_10[i] = parseFloat(medium_by_method_10[i])
+medium_by_method_1[i] = parseFloat(medium_by_method_1[i])
 high_by_method_500[i] = parseFloat(high_by_method_500[i])
 high_by_method_100[i] = parseFloat(high_by_method_100[i])
 high_by_method_10[i] = parseFloat(high_by_method_10[i])
+high_by_method_1[i] = parseFloat(high_by_method_1[i])
 }
 
-//remove cluspro columns to prevent graph begin misleading
-var methods_minus_cluspro = []
-var methods_only_cluspro = []
-var acceptable_minus_cluspro_500 = [];
-var acceptable_minus_cluspro_100 = [];
-var acceptable_minus_cluspro_10 = [];
-var medium_minus_cluspro_500 = [];
-var medium_minus_cluspro_100 = [];
-var medium_minus_cluspro_10 = [];
-var high_minus_cluspro_500 = [];
-var high_minus_cluspro_100 = [];
-var high_minus_cluspro_10 = [];
-var acceptable_only_cluspro = [];
-var medium_only_cluspro = [];
-var high_only_cluspro = [];
-var acceptable_or_better_only_cluspro = [];
-
-for (var i=0;i<methods.length;i++) {
-if (methods[i].slice(0,7) != 'ClusPro') {
-	methods_minus_cluspro.push(methods[i]);
-	acceptable_minus_cluspro_500.push(acceptable_by_method_500[i]);
-	acceptable_minus_cluspro_100.push(acceptable_by_method_100[i]);
-	acceptable_minus_cluspro_10.push(acceptable_by_method_10[i]);
-	medium_minus_cluspro_500.push(medium_by_method_500[i]);
-	medium_minus_cluspro_100.push(medium_by_method_100[i]);
-	medium_minus_cluspro_10.push(medium_by_method_10[i]);
-	high_minus_cluspro_500.push(high_by_method_500[i]);
-	high_minus_cluspro_100.push(high_by_method_100[i]);
-	high_minus_cluspro_10.push(high_by_method_10[i]);
-} else {
-	methods_only_cluspro.push(methods[i]);
-	acceptable_or_better_only_cluspro.push(acceptable_by_method_500[i]+medium_by_method_500[i]+high_by_method_500[i]);
-	acceptable_only_cluspro.push(acceptable_by_method_500[i]);
-	medium_only_cluspro.push(medium_by_method_500[i]);
-	high_only_cluspro.push(high_by_method_500[i]);
-}}
 
 $(function () {
 	$('#capri_comparison').highcharts({
@@ -103,7 +81,10 @@ $(function () {
 		type: 'column'
 	},
 	title: {
-		text: 'Number of acceptable, medium and high quality models produced by each docking method for {{ target_choice }}, a {{ target_difficulty }} target'
+		text: 'Number of acceptable, medium and high quality models produced by each docking method for {{ target.name }}, a {{ target_difficulty }} target'
+	},
+	subtitle: {
+		text: 'Amongst the Top 100 models according to method rank'
 	},
 	legend : {
 		enabled: true
@@ -116,11 +97,11 @@ $(function () {
 	yAxis: {
 		min: 0,
 		title: {
-			text: 'Number of acceptable or better models produced in the top x models'
-		}
+			text: 'Number of acceptable or better models produced in the Top 100 models'
+		},
 	},
 	xAxis: {
-		categories: methods_minus_cluspro
+		categories: methods
 	},
 	plotOptions: {
         	series: {
@@ -130,120 +111,123 @@ $(function () {
 	series: [{
 		id: 'acc_500',
 		name: 'Acceptable models',
-		data: acceptable_minus_cluspro_500,
-		stack: 'top_500',
-		color: '#990000'
+		data: acceptable_by_method_500,
+		stack: 'Top 500',
+		color: '#990000',
+		visible: false,
+		showInLegend: false
 	}, {
 		id: 'acc_100',
 		name: 'Acceptable models',
-		data: acceptable_minus_cluspro_100,
-		stack: 'top_100',
+		data: acceptable_by_method_100,
+		stack: 'Top 100',
 		color: '#990000',
-		linkedTo: 'acc_500'
 	}, {
 		id: 'acc_10',
 		name: 'Acceptable models',
-		data: acceptable_minus_cluspro_10,
-		stack: 'top_10',
+		data: acceptable_by_method_10,
+		stack: 'Top 10',
 		color: '#990000',
-		linkedTo: 'acc_500'
+		visible: false,
+		showInLegend: false
+	}, {
+		id: 'acc_1',
+		name: 'Acceptable models',
+		data: acceptable_by_method_1,
+		stack: 'Top 1',
+		color: '#990000',
+		visible: false,
+		showInLegend: false
 	}, {
 		id: 'med_500',
 		name: 'Medium models',
-		data: medium_minus_cluspro_500,
-		stack: 'top_500',
-		color: '#009900'
+		data: medium_by_method_500,
+		stack: 'Top 500',
+		color: '#009900',
+		visible: false,
+		showInLegend: false
 	}, {
 		id: 'med_100',
 		name: 'Medium models',
-		data: medium_minus_cluspro_100,
-		stack: 'top_100',
+		data: medium_by_method_100,
+		stack: 'Top 100',
 		color: '#009900',
-		linkedTo: 'med_500'
 	}, {
 		id: 'med_10',
 		name: 'Medium models',
-		data: medium_minus_cluspro_10,
-		stack: 'top_10',
+		data: medium_by_method_10,
+		stack: 'Top 10',
 		color: '#009900',
-		linkedTo: 'med_500'
+		visible: false,
+		showInLegend: false
+	}, {
+		id: 'med_1',
+		name: 'Medium models',
+		data: medium_by_method_1,
+		stack: 'Top 1',
+		color: '#009900',
+		visible: false,
+		showInLegend: false
 	}, {
 		id: 'hig_500',
 		name: 'High models',
-		data: high_minus_cluspro_500,
-		stack: 'top_500',
-		color: '#000099'
+		data: high_by_method_500,
+		stack: 'Top 500',
+		color: '#000099',
+		visible: false,
+		showInLegend: false
 	}, {
 		id: 'hig_100',
 		name: 'High models',
-		data: high_minus_cluspro_100,
-		stack: 'top_100',
+		data: high_by_method_100,
+		stack: 'Top 100',
 		color: '#000099',
-		linkedTo: 'hig_500'
 	}, {
 		id: 'hig_10',
 		name: 'High models',
-		data: high_minus_cluspro_10,
-		stack: 'top_10',
+		data: high_by_method_10,
+		stack: 'Top 10',
 		color: '#000099',
-		linkedTo: 'hig_500'
+		visible: false,
+		showInLegend: false
+	}, {
+		id: 'hig_1',
+		name: 'High models',
+		data: high_by_method_1,
+		stack: 'Top 1',
+		color: '#000099',
+		visible: false,
+		showInLegend: false
 	}]
 	});
 });
-</script>
 
-<br><br><div id="cluspro_table"></div><br>
+$('#n_top_models').change(function(){
+	var n = $('#n_top_models option:selected').val();
+	var chart = $('#capri_comparison').highcharts();
+	chart.setTitle(null, { text: 'Amongst the '+n+' models according to method rank' });
+	chart.yAxis[0].update({
+            title: {
+		text: 'Number of acceptable or better models produced in the '+n+' models'
+	    }
+        });
+	for(var i=0;i<chart.series.length;i++) {        
+		var series = chart.series[i]
+		if(series.options['stack']==n){
+			series.show();
+			series.options.showInLegend = true;
+			chart.legend.renderItem(series);
+ 			chart.legend.render();
+		} else{
+			series.hide();
+			series.options.showInLegend = false;
+			chart.legend.destroyItem(series);
+			chart.legend.render();
+		}
+	}
+	chart.render();
+});
 
-<script>
-//construct cluspro table
-var cluspro_table_rows = "<table class=\"table\"><tr><th colspan=4>ClusPro also produced the following number of acceptable or better models using its method of producing 14000 models, clustering the top 1000 and outputting the cluster centers (final output of 25-30 structures).</th></tr><tr><th>Method</th><th>Acceptable</th><th>Medium</th><th>High</th></tr>";
-for (var i=0;i<methods_only_cluspro.length;i++) {
-	cluspro_table_rows += "<tr><td>"+methods_only_cluspro[i]+"</td><td>"+acceptable_only_cluspro[i]+"</td><td>"+medium_only_cluspro[i]+"</td><td>"+high_only_cluspro[i]+"</td></tr>";
-};
-cluspro_table_rows += "</table>";
-document.getElementById("cluspro_table").innerHTML = cluspro_table_rows;
-</script>
-
-{% elif at_least_one %}
-
-<big>No method other than ClusPro produced acceptable models for this target on their top 500. Choose another target to see how well the methods are able to choose acceptable models.</big><br><br>
-
-<br><br><div id="cluspro_table"></div><br>
-
-<script>
-var acceptable_by_method_500 = [{% for a in acceptable_by_method_500 %}"{{ a }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
-var medium_by_method_500 = [{% for a in medium_by_method_500 %}"{{ a }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
-var high_by_method_500 = [{% for a in high_by_method_500 %}"{{ a }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
-
-for (var i=0;i<acceptable_by_method_500.length;i++) {
-acceptable_by_method_500[i] = parseFloat(acceptable_by_method_500[i])
-medium_by_method_500[i] = parseFloat(medium_by_method_500[i])
-high_by_method_500[i] = parseFloat(high_by_method_500[i])
-}
-
-//remove cluspro columns to prevent graph begin misleading
-var methods_only_cluspro = []
-var acceptable_only_cluspro = [];
-var medium_only_cluspro = [];
-var high_only_cluspro = [];
-var acceptable_or_better_only_cluspro = [];
-
-for (var i=0;i<methods.length;i++) {
-if (methods[i].slice(0,7) == 'ClusPro') {
-	methods_only_cluspro.push(methods[i]);
-	acceptable_or_better_only_cluspro.push(acceptable_by_method_500[i]+medium_by_method_500[i]+high_by_method_500[i]);
-	acceptable_only_cluspro.push(acceptable_by_method_500[i]);
-	medium_only_cluspro.push(medium_by_method_500[i]);
-	high_only_cluspro.push(high_by_method_500[i]);
-}}
-
-//construct cluspro table
-var cluspro_table_rows = "<table class=\"table\"><tr><th colspan=4>ClusPro produced the following number of acceptable or better models using its method of producing 14000 models, clustering the top 1000 and outputting the cluster centers (final output of 25-30 structures).</th></tr><tr><th>Method</th><th>Acceptable</th><th>Medium</th><th>High</th></tr>";
-for (var i=0;i<methods_only_cluspro.length;i++) {
-	cluspro_table_rows += "<tr><td>"+methods_only_cluspro[i]+"</td><td>"+acceptable_only_cluspro[i]+"</td><td>"+medium_only_cluspro[i]+"</td><td>"+high_only_cluspro[i]+"</td></tr>";
-};
-cluspro_table_rows += "</table>";
-document.getElementById("cluspro_table").innerHTML = cluspro_table_rows;
 </script>
 
 {% else %}
@@ -252,16 +236,21 @@ document.getElementById("cluspro_table").innerHTML = cluspro_table_rows;
 
 {% endif %}
 
+
 <div id="method_comparison" style="width:100%; height:600px;"></div>
 
 <script>
 //Method comparison graph
 var irmsd_by_method = [{% for a in irmsd_by_method %}"{{ a }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
 var average_irmsds = [{% for b in average_irmsds %}"{{ b }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
+var best_models = [{% for c in best_irmsd_model_by_method %}"{{ c }}"{% if forloop.last %}{%else%},{%endif%}{% endfor %}];
+
+var data_series = []
 
 for (var i=0;i<irmsd_by_method.length;i++) {
-irmsd_by_method[i] = parseFloat(irmsd_by_method[i])
+//irmsd_by_method[i] = parseFloat(irmsd_by_method[i])
 average_irmsds[i] = parseFloat(average_irmsds[i])
+data_series.push({'y':parseFloat(irmsd_by_method[i]),'best_model':best_models[i]})
 }
 
 $(function () {
@@ -288,9 +277,21 @@ $(function () {
 	xAxis: {
 		categories: methods
 	},
+	plotOptions: {
+		series: {
+			cursor: 'pointer',
+			point : {
+				events: {
+					click : function(){
+						location.href = "/model_"+this.options.best_model;
+					}
+				}
+			}
+		}
+	},
 	series: [{
 		name: 'I-RMSD of best model',
-		data: irmsd_by_method
+		data: data_series
 	}]
 	});
 });
